--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,22 @@
 }
 nav {
     display: flex;
-    justify-content: space-around;
     width: 100%;
     line-height: 80px;
     z-index: 111;
+    position: fixed;
 
 
 }
+.container-fluid{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+#liste{
+    margin-left: 65%;
+}
+
 .logo {
     display: flex;
     font-size: 30px;
@@ -38,4 +47,13 @@ nav {
 .navit li a{
     text-decoration: none;
     
+}
+a {
+    text-decoration: none;
+
+}
+.footer-it{
+    display: flex;
+    list-style: none;
+    justify-content: center;
 }
