--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    
     box-sizing: border-box;
     font-size: 'Open Sans', sans-serif;
 }
@@ -50,10 +51,21 @@ nav {
 }
 a {
     text-decoration: none;
+    color:black;
 
 }
 .footer-it{
     display: flex;
     list-style: none;
     justify-content: center;
+}
+.footer a{
+    margin-left: 30px;
+    padding: 20px;
+}
+
+.footer a:hover{
+    background-color: black;
+    color: aliceblue;
+    border-radius: 40PX;
 }
